<resources>
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>
    <string name="notif_headlines">This is a notification</string>
    <string name="notif_description">This is a notification description</string>
    <string name="delete">this is delete button</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="home">Home</string>
    <string name="score">Score</string>
    <string name="absent">Attendance</string>
    <string name="profile">Profile</string>
    <string name="list_course">Ini salah satu mata pelajaran</string>
    <string name="back">Back</string>
    <string name="data_siswa">DATA SISWA</string>
    <string name="nilai">NILAI</string>
    <string name="lulus">LULUS</string>
    <string name="student_name">Jeon Jungkook</string>
    <string name="student_grade">XII-A</string>
    <string name="student_semester">Semester Genap</string>
    <string name="app_name">SEMA</string>
    <string name="invalid_email">NIM Harus Berupa Angka</string>
    <string name="invalid_password">Password harus lebih dari 8 karakter</string>
    <string name="register">Register</string>
    <string name="register_question">Belum memiliki akun?</string>
    <string name="required_field">Harus Diisi</string>
    <string name="auth_label">Masukkan NIM dan Password Siswa</string>
    <string name="success_register">Daftar Berhasil</string>
    <string name="register_label">Register</string>
    <string name="login_question">Sudah punya akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login_statement">Masukkan NIS Siswa dan Password</string>
    <string name="login_button">MASUK</string>
    <string name="title_home">Home</string>
    <string name="menu_title_blank" />
    <string name="title_profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="nis">NIS</string>
    <string name="title_score">Score</string>
    <string name="attendance">Absensi</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="parent_name">Wali Murid</string>
    <string name="logout">KELUAR</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="slogan">Belajar itu Keren!</string>
    <string name="search_hint">Cari disini</string>
    <string name="news">Berita</string>
    <string name="setting">PENGATURAN</string>
    <string name="language">BAHASA</string>
    <string name="theme">MODE TAMPILAN</string>
    <string name="accessbility">AKSESBILITAS</string>
    <string name="course_title">MATA PELAJARAN</string>
    <string name="student_icon">Ini adalah ikon murid</string>
    <string name="remidi">REMIDI</string>
    <string name="nama_ujian">Nama Ujian</string>
    <string name="kkm">KKM =</string>
    <string name="score_result">80</string>
    <string name="post">Postingan</string>
    <string name="teacher">Guru</string>
    <string name="time_upload">Baru Saja</string>
    <string name="month">Bulan</string>
    <string name="alpha">Alpha</string>
    <string name="permit">Izin</string>
    <string name="sick">Sakit</string>
    <string name="present">Hadir</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="holiday">Libur</string>
    <string name="status1">Siswa Berprestasi Tinggi</string>
    <string name="status2">Siswa Berprestasi Menengah</string>
    <string name="status3">Siswa Berprestasi Rendah</string>
    <string name="status4">Memerlukan Tindakan</string>
    <string name="pesan">Ketik Disini</string>
    <string name="desc_news1">Sesuai dengan program sekolah dan hasil sosialisasi pada tanggal 15 Oktober 2018, dengan ini diberitahukan bahwa Study Tour (Wisata Siswa) yang akan dilaksanakan pada bulan Desember 2018 (sekitar tanggal 9 Desember 2018/ minggu ke-2). Salah satu pertimbangannya adalah mengantisipasi rencana kenaikan BBM, sehingga beban biaya study tour bisa ditekan lebih rendah (yaitu Rp. 875.000).</string>
    <string name="desc_news2">Sehubungan dengan akan dilaksanakan Ujian Akhir Semester Tahun Akademik Ganjil 2022/2023 sesuai dengan Surat Kepala Biro Administrasi Akademik Tanggal 21 Desember 2022 Perihal Tentang Pemberitahuan Ujian Akhir Semester, maka dengan ini kami memberitahukan bahwa: \n1. Ujian Akhir Semester Ganjil 2022/2023 dilaksanakan pada Tanggal 16 s/d 21 Januari 2023.\n2.Ujian dapat dilaksanakan oleh Dosen apabila perkuliahan sudah mencapai Minimal 85%.\n
                        3. Mahasiswa dapat mengikuti ujian apabila sudah melunasi SPP Tahap II dan memiliki kartu ujian yang dicetak oleh Akademik Fakultas (SBAK).</string>
    <string name="desc_news3">Berkenaan dengan Pandemi Covid-19, maka pembagian Raport Semester Genap Tahun 2020/2021 akan dilaksanakan secara online pada Hari Senin, 28 Juni 2021 melalui website resmi SMK Negeri 21 Jakarta. \nPembagian Raport Semester Genap Tahun 2020/2021 melalui online ini bukan merupakan pengganti Raport Cetak. Raport asli akan diberikan secara offline dengan menunggu pemberitahuan resmi dari Pemerintah terkait Pembatasan Sosial Berskala Besar.</string>
    <string name="desc_news4">Sehubungan dengan kegiatan pembelajaran semester I, tahun pelajaran 2020/2021, yang berakhir pada tanggal 23 Desember 2020, maka kegiatan libur semester ganjil jatuh pada tanggal 24 – 31 Desember 2020. Kegiatan pembelajaran semester genap akan kembali dimulai pada tanggal 04 Januari 2021. Kegiatan Belajar-Mengajar (KBM) di semester genap, untuk sementara ini masih menggunakan moda daring (dalam jejaring) dan luring (luar jejaring), hingga ada pengumuman lebih lanjut.</string>
    <string name="contact">Kontak</string>
</resources>