<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.parentingapp.ui.HomeFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_score"
        android:name="com.example.parentingapp.ui.ScoreFragment"
        android:label="fragment_score"
        tools:layout="@layout/fragment_score" />
    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.example.parentingapp.ui.AttendanceFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_attendance" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.parentingapp.ui.ProfileFragment"
        android:label="@string/title_score"
        tools:layout="@layout/fragment_profile" />

</navigation>