<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ui.ScoreDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:rotation="270"
                android:src="@drawable/baseline_arrow_circle_up_24" />

            <TextView
                android:id="@+id/tv_moth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/month"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/student_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_moth"
                android:layout_marginTop="28dp"
                android:text="@string/student_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/student_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_name"
                android:layout_marginTop="10dp"
                android:text="@string/student_grade"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/student_semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_grade"
                android:layout_marginTop="10dp"
                android:text="@string/student_semester"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/student_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/tv_moth"
                android:layout_alignParentRight="true"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/student_icon"
                android:src="@drawable/student_icon" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_title"
            android:background="@drawable/custom_container"
            android:padding="20dp">

            <TextView
                android:id="@+id/nilai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendance"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/keterangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nilai">

                <ImageView
                    android:id="@+id/present_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sharp_square_24"
                    app:tint="@color/dark_green" />

                <TextView
                    android:id="@+id/present_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/present"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/sick_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/sharp_square_24"
                    app:tint="@color/dark_orange" />

                <TextView
                    android:id="@+id/sick_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sick"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/permit_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/sharp_square_24"
                    app:tint="@color/light_green" />

                <TextView
                    android:id="@+id/permit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/permit"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/alpha_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/sharp_square_24"
                    app:tint="@color/dark_red" />

                <TextView
                    android:id="@+id/alpha_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/alpha"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/holiday_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/sharp_square_24"
                    app:tint="@color/light_gray" />

                <TextView
                    android:id="@+id/holiday_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/holiday"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_attendance"
                app:layout_constraintTop_toBottomOf="@+id/keterangan" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</ScrollView>