<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_nilai"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_nilai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sharp_square_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/dark_green" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/lulus"
            android:textColor="?android:textColorPrimary"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_status"
            app:layout_constraintStart_toEndOf="@+id/iv_status"
            app:layout_constraintTop_toTopOf="@+id/iv_status" />

        <TextView
            android:id="@+id/nama_ujian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_ujian"
            android:textColor="?android:textColorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_status" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_result"
            android:textSize="35sp"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/kkm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kkm"
            android:textSize="10sp"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintTop_toBottomOf="@id/nama_ujian"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/kkm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_result"
            android:textSize="10sp"
            android:textColor="?android:textColorPrimary"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/nama_ujian"
            app:layout_constraintStart_toEndOf="@+id/kkm_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>